# ConsultoriosCompartidos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  control_tui.bat  key_consultorios_dev  key_consultorios_dev.pub  manage.py  podman-compose.yml  pyproject.toml
apps/: __init__.py
apps/astrotrace/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/catalog/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  form_utils.py  mixins.py  models.py  permissions.py  validators.py
apps/finance/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/identity/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py
apps/integration/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/presentation/: __init__.py  admin.py  apps.py  context_processors.py  models.py  navigation.py  urls.py  views.py
apps/reports/: __init__.py  forms.py  urls.py  views.py
apps/scheduling/: __init__.py  admin.py  apps.py  (+4 more)
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
tests/: __init__.py  test_access_integration.py  test_catalog.py  test_custom_user.py  test_dashboard.py  test_finance.py  test_payments.py  test_project.py  test_prompt13_hardening.py  test_reports.py  test_reservations.py  test_scheduling.py  test_seed_initial_data.py  test_settlements.py  test_timeline.py  test_vault.py  test_views.py
tools/: control_tui.py
(+122 files in other folders)
